--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   </style>
 </head>
 <body>
-  <h1>오늘 당신에게 어떤 말이 필요했나요?11</h1>
+  <h1>오늘 당신에게 어떤 말이 필요했나요?</h1>
 
   <div class="input-box">
     <input type="text" id="userInput" placeholder="듣고 싶은 말을 적어보세요" />
