--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
   </style>
 </head>
 <body>
-  <h1>오늘 당신에게 어떤 말이 필요했나요?</h1>
+  <h1>오늘 당신에게 무슨 일이 있었나요?</h1>
 
   <div class="input-box">
-    <input type="text" id="userInput" placeholder="듣고 싶은 말을 적어보세요" />
+    <input type="text" id="userInput" placeholder="궁금한 점,기분이나 감정,아무 거나 상관 없어요!" />
     <button onclick="sendToServer()">듣고 싶어요</button>
   </div>
 
@@ -93,7 +93,7 @@
     async function sendToServer() {
       const input = document.getElementById('userInput').value;
       const output = document.getElementById('outputText');
-      output.innerHTML = "잠시만요... 따듯한 말을 찾는 중이에요.";
+      output.innerHTML = "잠시만요... 따듯한 말을 찾는 중이에요!..";
 
       try {
         const response = await fetch('https://nuyhsb.onrender.com/chat', {
