--- a/index.html
+++ b/index.html
@@ -107,7 +107,8 @@
   <h1>오늘 당신에게 무슨 일이 있었나요?</h1>
 
   <div class="input-box">
-    <input type="text" id="userInput" placeholder="현재 기분이나 감정,무슨 일이 있었는지 아무 거나 괜찮아요!궁금한 점이 있어도 좋아요." />
+    <input type="text" id="userInput" placeholder="현재 기분이나 감정,무슨 일이 있었는지 아무 거나 괜찮아요!
+      궁금한 점이 있어도 좋아요." />
     <button onclick="sendToServer()">듣고 싶어요</button>
     <div class="spinner" id="spinner"></div>
     <div class="loading-text" id="loadingText">잠시만 기다려주세요!...</div>
